--- a/package.json
+++ b/package.json
@@ -2,19 +2,37 @@
   "name": "get_link_fshare",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT",
-  "type": "module",
+  "repository": "https://github.com/phd91105/get-link-fshare",
+  "author": "Phạm Duy <PHD051199@gmail.com>",
+  "license": "UNLICENSED",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
-  },
-  "dependencies": {
-    "axios": "^0.21.1",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc -p .",
+    "lint": "eslint . --ext .ts",
+    "prettier": "prettier --check \"src/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "test": "yarn lint && yarn prettier"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "eslint": "^8.26.0",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "@googleapis/customsearch": "^1.0.0",
+    "axios": "^1.2.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "lodash": "^4.17.21"
   }
 }
