Add dockerfile, small fix message

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 EMAIL=
 PASSWORD=
-APP_KEY=
-USER_AGENT=
 ORIGIN=
-GG_API_KEY=
-GG_CX=
+APP_KEY=2C4ErbRVwcxmUtPTwR5uZq6Svz54JbHc
+USER_AGENT=FshareiOSApp-saCP7ssw2u7w
+GG_API_KEY=AIzaSyCkHtU1CuscUnF-DWuf-IXaI-ZAPnBpDnk
+GG_CX=001519239593396809485:inf84rznb7w
